--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/Ciscoo91/ecwebsite#readme",
   "devDependencies": {
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-sass": "^4.0.2",
     "node-sass": "^4.13.0",
     "pug": "^2.0.4"
   }
